[project]
name = "acs"
version = "0.1.0"
description = ""
authors = [{ name = "Carson McNeil", email = "carson@forestneurotech.org" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.11,<3.13"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jupyterlab>=4.3.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[project.urls]


[build-system]
#requires = ["setuptools >= 61.0"]
requires = ["hatchling"]
build-backend = "hatchling.build"


